--- a/D6/index.html
+++ b/D6/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>PhoneExpress Shop</h1>
+        <h1 id="title">PhoneExpress Shop</h1>
     </header>
     
     <main>
@@ -20,7 +20,7 @@
             <div class="textContainer">
                 <h1>Google Pixel 7</h1>
                 <p class="description">Schermo: 6.3 Pollici, Ram: 8GB, Memoria: 128GB</p>
-                <p>Price: <b>649.00 €</b></p> 
+                <p class="price">Price: <b>649.00 €</b></p> 
                 <div>
                     <button><a href="https://www.amazon.it/Google-Pixel-Smartphone-sbloccato-grandangolo/dp/B0BDK63RF3/ref=sr_1_2?keywords=google+pixel+7&qid=1676485683&sprefix=google+pi%2Caps%2C172&sr=8-2" target="_blank">Compra ora!</a></button>
                 </div>
@@ -35,7 +35,7 @@
             <div class="textContainer">
                 <h1>Iphone 14</h1>
                 <p class="description">Schermo: 6.1 Pollici, Ram: 8GB, Memoria: 128GB</p>
-                <p>Price: <b>899.00 €</b></p> 
+                <p class="price">Price: <b>899.00 €</b></p> 
                 <div>
                     <button><a href="https://www.amazon.it/Apple-iPhone-14-128-GB/dp/B0BDJZLSDH/ref=sr_1_1_sspa?keywords=iphone+14&qid=1676491173&sprefix=iphone+%2Caps%2C130&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" target="_blank">Compra ora!</a></button>
                 </div>
@@ -50,7 +50,7 @@
             <div class="textContainer">
                 <h1>Samsung S22</h1>
                 <p class="description">Schermo: 6.1 Pollici, Ram: 8GB, Memoria: 128GB</p>
-                <p>Price: <b>689.00 €</b></p> 
+                <p class="price">Price: <b>689.00 €</b></p> 
                 <div>
                     <button><a href="https://www.amazon.it/Caricatore-Cellulare-Smartphone-Fotocamere-Versione/dp/B09R1SH4H1/ref=sr_1_1?keywords=samsung+s22&qid=1676491345&sprefix=samsun%2Caps%2C93&sr=8-1" target="_blank">Compra ora!</a></button>
                 </div>
@@ -65,7 +65,7 @@
             <div class="textContainer">
                 <h1>Samsung S23+</h1>
                 <p class="description">Schermo: 6.6 Pollici, Ram: 8GB, Memoria: 256GB</p>
-                <p>Price: <b>840.00 €</b></p> 
+                <p class="price">Price: <b>840.00 €</b></p> 
                 <div>
                     <button><a href="https://www.amazon.it/Samsung-Smartphone-Fotocamere-Versione-Italiana/dp/B09QLBSP8M/ref=sr_1_6?keywords=samsung+s23+plus&qid=1676491442&sprefix=samsung+s23%2Caps%2C106&sr=8-6" target="_blank">Compra ora!</a></button>
                 </div>
@@ -80,7 +80,7 @@
             <div class="textContainer">
                 <h1>Xiaomi 12T Pro</h1>
                 <p class="description">Schermo: 6.67 Pollici, Ram: 8GB, Memoria: 256GB</p>
-                <p>Price: <b>751.00 €</b></p> 
+                <p class="price">Price: <b>751.00 €</b></p> 
                 <div>
                     <button><a href="https://www.amazon.it/Xiaomi-12T-Pro-Smartphone-Hypercharge/dp/B0BB847CB9/ref=sr_1_1?keywords=xiaomi+12t+pro&qid=1676491630&sprefix=xiaom%2Caps%2C105&sr=8-1" target="_blank">Compra ora!</a></button>
                 </div>
