--- a/D8/Esercizio/index.html
+++ b/D8/Esercizio/index.html
@@ -18,6 +18,37 @@
             <li>Secondo Elemento</li>
             <li>Terzo Elemento</li>
         </ol>
+        <table>
+            <tr>
+              <td>Riga 1 Colonna 1</td>
+              <td><a href="#"><img src=" https://unsplash.com/it/foto/xdMJ2RiMpGM " alt=""></a></td>
+              <td rowspan="2">Riga 1 Colonna 3</td>
+              <td>Riga 1 Colonna 4</td>
+              <td>Riga 1 Colonna 5</td>
+            </tr>
+            <tr>
+              <td>Riga 2 Colonna 1</td>
+              <td><a href="#"><img src="https://unsplash.com/it/foto/qClP7kYfi08" alt=""></a></td>
+              <td>Riga 2 Colonna 3</td>
+              <td>Riga 2 Colonna 4</td>
+              <td>Riga 2 Colonna 5</td>
+            </tr>
+            <tr>
+              <td>Riga 3 Colonna 1</td>
+              <td><a href="#"><img src="https://unsplash.com/it/foto/cF4y02NpoYY" alt=""></a></td>
+              <td>Riga 3 Colonna 3</td>
+              <td>Riga 3 Colonna 4</td>
+              <td>Riga 3 Colonna 5</td>
+            </tr>
+            <tr>
+              <td>Riga 4 Colonna 1</td>
+              <td><a href="#"><img src="https://unsplash.com/it/foto/kh9JzNHX6B0" alt=""></a></td>
+              <td>Riga 4 Colonna 3</td>
+              <td>Riga 4 Colonna 4</td>
+              <td>Riga 4 Colonna 5</td>
+            </tr>
+          </table>
+
 
         
     </main>
