--- a/D8/Esercizio/index.html
+++ b/D8/Esercizio/index.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esercizio 8</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Esercizio 8</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <title>
-        <h1>La mia pagina dell'Esercizio 8</h1>
-    </title>
+  <title>
+      <h1>La mia pagina dell'Esercizio 8</h1>
+  </title>
 
-    <main>
-        <ol>
-            <li>Primo Elemento</li>
-            <li>Secondo Elemento</li>
-            <li>Terzo Elemento</li>
-        </ol>
-        <table>
-            <tr>
-              <td>Riga 1 Colonna 1</td>
-              <td><a href="#"><img src=" https://unsplash.com/it/foto/xdMJ2RiMpGM " alt=""></a></td>
-              <td rowspan="2">Riga 1 Colonna 3</td>
-              <td>Riga 1 Colonna 4</td>
-              <td>Riga 1 Colonna 5</td>
-            </tr>
-            <tr>
-              <td>Riga 2 Colonna 1</td>
-              <td><a href="#"><img src="https://unsplash.com/it/foto/qClP7kYfi08" alt=""></a></td>
-              <td>Riga 2 Colonna 3</td>
-              <td>Riga 2 Colonna 4</td>
-              <td>Riga 2 Colonna 5</td>
-            </tr>
-            <tr>
-              <td>Riga 3 Colonna 1</td>
-              <td><a href="#"><img src="https://unsplash.com/it/foto/cF4y02NpoYY" alt=""></a></td>
-              <td>Riga 3 Colonna 3</td>
-              <td>Riga 3 Colonna 4</td>
-              <td>Riga 3 Colonna 5</td>
-            </tr>
-            <tr>
-              <td>Riga 4 Colonna 1</td>
-              <td><a href="#"><img src="https://unsplash.com/it/foto/kh9JzNHX6B0" alt=""></a></td>
-              <td>Riga 4 Colonna 3</td>
-              <td>Riga 4 Colonna 4</td>
-              <td>Riga 4 Colonna 5</td>
-            </tr>
-          </table>
+  <main>
+    <ol>
+      <li>Primo Elemento</li>
+      <li>Secondo Elemento</li>
+      <li>Terzo Elemento</li>
+    </ol>
+    <table>
+      <tr>
+        <td>Riga 1 Colonna 1</td>
+        <td><a href="#"><img src="https://unsplash.com/it/foto/xdMJ2RiMpGM" alt=""></a></td>
+        <td rowspan="2">Riga 1 Colonna 3</td>
+        <td>Riga 1 Colonna 4</td>
+        <td>Riga 1 Colonna 5</td>
+      </tr>
+      <tr>
+        <td>Riga 2 Colonna 1</td>
+        <td><a href="#"><img src="https://unsplash.com/it/foto/qClP7kYfi08" alt=""></a></td>
+        <td>Riga 2 Colonna 3</td>
+        <td>Riga 2 Colonna 4</td>
+        <td>Riga 2 Colonna 5</td>
+      </tr>
+      <tr>
+        <td>Riga 3 Colonna 1</td>
+        <td><a href="#"><img src="https://unsplash.com/it/foto/cF4y02NpoYY" alt=""></a></td>
+        <td>Riga 3 Colonna 3</td>
+        <td>Riga 3 Colonna 4</td>
+        <td>Riga 3 Colonna 5</td>
+      </tr>
+      <tr>
+        <td>Riga 4 Colonna 1</td>
+        <td><a href="#"><img src="https://unsplash.com/it/foto/kh9JzNHX6B0" alt=""></a></td>
+        <td>Riga 4 Colonna 3</td>
+        <td>Riga 4 Colonna 4</td>
+        <td>Riga 4 Colonna 5</td>
+      </tr>
+    </table>
+
+    <hr>
+
+    <div>
+      <ul> 
+        <li>Ciao</li>
+        <li>Hola</li>
+        <li>Hello</li>
+      </ul>
+    </div>
+
+    <footer>
+      <h4>Alessio</h4>
+      <p>
+        Ho 25 anni, lavoro ancora come spedizioniere, ma tra pochi mesi sarò un Developer!
+      </p>
+    </footer>
 
 
-        
-    </main>
 
-<script src="main.js"></script>
+
+      
+  </main>
+
+  <script src="main.js"></script>
 </body>
 </html>
