--- a/D8/Esercizio/index.html
+++ b/D8/Esercizio/index.html
@@ -21,28 +21,28 @@
     <table>
       <tr>
         <td>Riga 1 Colonna 1</td>
-        <td><a href="#"><img src="https://unsplash.com/it/foto/xdMJ2RiMpGM" alt=""></a></td>
-        <td rowspan="2">Riga 1 Colonna 3</td>
-        <td>Riga 1 Colonna 4</td>
+        <td><a href="#"><img src="https://images.unsplash.com/photo-1675516236695-1917634202fb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1885&q=80" alt=""></a></td>
+        <td>Riga 1 Colonna 3</td>
+        <td rowspan="2">Riga 1 Colonna 4</td>
         <td>Riga 1 Colonna 5</td>
       </tr>
       <tr>
         <td>Riga 2 Colonna 1</td>
-        <td><a href="#"><img src="https://unsplash.com/it/foto/qClP7kYfi08" alt=""></a></td>
+        <td><a href="#"><img src="https://images.unsplash.com/photo-1675652426417-a7305afe7dbe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt=""></a></td>
         <td>Riga 2 Colonna 3</td>
         <td>Riga 2 Colonna 4</td>
         <td>Riga 2 Colonna 5</td>
       </tr>
       <tr>
         <td>Riga 3 Colonna 1</td>
-        <td><a href="#"><img src="https://unsplash.com/it/foto/cF4y02NpoYY" alt=""></a></td>
+        <td><a href="#"><img src="https://images.unsplash.com/photo-1676026273590-ac4b25e833af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1333&q=80" alt=""></a></td>
         <td>Riga 3 Colonna 3</td>
         <td>Riga 3 Colonna 4</td>
         <td>Riga 3 Colonna 5</td>
       </tr>
       <tr>
         <td>Riga 4 Colonna 1</td>
-        <td><a href="#"><img src="https://unsplash.com/it/foto/kh9JzNHX6B0" alt=""></a></td>
+        <td><a href="#"><img src="https://images.unsplash.com/photo-1675842643224-f43b943ee340?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1328&q=80" alt=""></a></td>
         <td>Riga 4 Colonna 3</td>
         <td>Riga 4 Colonna 4</td>
         <td>Riga 4 Colonna 5</td>
