--- a/D8/Quiz/index.html
+++ b/D8/Quiz/index.html
@@ -8,18 +8,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="questionBox">
-            <h1 class="question">What does CPU stand for?</h1>
+    <section id="quizBox">
+        <!-- PRIMA DOMANDA -->
+        <div class="container">
+            <div class="questionBox">
+                <h1 class="question">What does CPU stand for?</h1>
+            </div>
+
+            <div class="answerBox">
+                <input id="first-answer" type="radio" name="primaDomanda" value="central-process-unit"><span>Central Process Unit</span> 
+                <input id="second-answer" type="radio" name="primaDomanda" value="central-personal-unit"><span>Computer Personal Unit</span>
+                <input id="third-answer" type="radio" name="primaDomanda" value="central-processor-unit"><span>Central Processor Unit</span>
+                <input id="four-answer" type="radio" name="primaDomanda" value="central-processing-unit"><span>Central Processing Unit</span>
+            </div>
+            <button id="firstButton" onclick="confermaPrimaRisposta()">Conferma</button>
         </div>
 
-        <div class="answerBox">
-            <input id="first-answer" type="radio" name="primaDomanda" value="central-process-unit"><span>Central Process Unit</span> 
-            <input id="second-answer" type="radio" name="primaDomanda" value="central-personal-unit"><span>Computer Personal Unit</span>
-            <input id="third-answer" type="radio" name="primaDomanda" value="central-processor-unit"><span>Central Processor Unit</span>
-            <input id="four-answer" type="radio" name="primaDomanda" value="central-processing-unit"><span>Central Processing Unit</span>
+        <!-- SECONDA DOMANDA -->
+        <div class="container">
+            <div class="questionBox">
+                <h1 class="question">In the programming language Java, which of these keywords would you put on a variable to make sure it doesn't get modified?</h1>
+            </div>
+
+            <div class="answerBox">
+                <input id="first-answer2" type="radio" name="secondaDomanda" value="final"><span>Final</span> 
+                <input id="second-answer2" type="radio" name="secondaDomanda" value="private"><span>Private</span>
+                <input id="third-answer2" type="radio" name="secondaDomanda" value="static"><span>Static</span>
+                <input id="four-answer2" type="radio" name="secondaDomanda" value="public"><span>Public</span>
+            </div>
+            <button id="secondButton" onclick="confermaSecondaRisposta()">Conferma</button>
         </div>
-        <button onclick="confermaPrimaRisposta()">Conferma</button>
+
+        <!-- TERZA DOMANDA -->
+        <div class="container">
+            <div class="questionBox">
+                <h1 class="question">The logo for Snapchat is a Bell.</h1>
+            </div>
+
+            <div class="answerBox">
+                <input id="first-answer3" type="radio" name="secondaDomanda" value="true"><span>True</span> 
+                <input id="second-answer3" type="radio" name="secondaDomanda" value="false"><span>False</span>
+            </div>
+            <button id="thirdButton" onclick="confermaTerzaRisposta()">Conferma</button>
+        </div>
+
+
     </section>
 
     
