quiz finito (manca CSS e ritocchi)

--- a/D8/Quiz/index.html
+++ b/D8/Quiz/index.html
@@ -13,7 +13,7 @@
         <!-- PRIMA DOMANDA -->
         <div id="container-one">
             <div class="questionBox">
-                <h1 class="question">What does CPU stand for?</h1>
+                <h1 class="question">1- What does CPU stand for?</h1>
             </div>
 
             <div class="answerBox">
@@ -28,7 +28,7 @@
         <!-- SECONDA DOMANDA -->
         <div id="container-two">
             <div class="questionBox">
-                <h1 class="question">In the programming language Java, which of these keywords would you put on a variable to make sure it doesn't get modified?</h1>
+                <h1 class="question">2- In the programming language Java, which of these keywords would you put on a variable to make sure it doesn't get modified?</h1>
             </div>
 
             <div class="answerBox">
@@ -43,7 +43,7 @@
         <!-- TERZA DOMANDA -->
         <div id="container-three">
             <div class="questionBox">
-                <h1 class="question">The logo for Snapchat is a Bell.</h1>
+                <h1 class="question">3- The logo for Snapchat is a Bell.</h1>
             </div>
 
             <div class="answerBox">
@@ -56,7 +56,7 @@
         <!-- QUARTA DOMANDA -->
         <div id="container-four">
             <div class="questionBox">
-                <h1 class="question">Pointers were not used in the original C programming language; they were added later on in C++.</h1>
+                <h1 class="question">4- Pointers were not used in the original C programming language; they were added later on in C++.</h1>
             </div>
 
             <div class="answerBox">
@@ -69,7 +69,7 @@
         <!-- QUINTA DOMANDA -->
         <div id="container-five">
             <div class="questionBox">
-                <h1 class="question">What is the most preferred image format used for logos in the Wikimedia database?</h1>
+                <h1 class="question">5- What is the most preferred image format used for logos in the Wikimedia database?</h1>
             </div>
 
             <div class="answerBox">
@@ -84,7 +84,7 @@
         <!-- SESTA DOMANDA -->
         <div id="container-six">
             <div class="questionBox">
-                <h1 class="question">In web design, what does CSS stand for?</h1>
+                <h1 class="question">6- In web design, what does CSS stand for?</h1>
             </div>
 
             <div class="answerBox">
@@ -99,7 +99,7 @@
         <!-- SETTIMA DOMANDA -->
         <div id="container-seven">
             <div class="questionBox">
-                <h1 class="question">What is the code name for the mobile operating system Android 7.0?</h1>
+                <h1 class="question">7- What is the code name for the mobile operating system Android 7.0?</h1>
             </div>
 
             <div class="answerBox">
@@ -114,7 +114,7 @@
         <!-- OTTAVA DOMANDA -->
         <div id="container-eight">
             <div class="questionBox">
-                <h1 class="question">On Twitter, what is the character limit for a Tweet?</h1>
+                <h1 class="question">8- On Twitter, what is the character limit for a Tweet?</h1>
             </div>
 
             <div class="answerBox">
@@ -129,7 +129,7 @@
         <!-- NONA DOMANDA -->
         <div id="container-nine">
             <div class="questionBox">
-                <h1 class="question">Linux was first created as an alternative to Windows XP.</h1>
+                <h1 class="question">9- Linux was first created as an alternative to Windows XP.</h1>
             </div>
 
             <div class="answerBox">
@@ -142,14 +142,14 @@
         <!-- DECIMA DOMANDA -->
         <div id="container-ten">
             <div class="questionBox">
-                <h1 class="question">On Twitter, what is the character limit for a Tweet?</h1>
+                <h1 class="question">10- Which programming language shares its name with an island in Indonesia?</h1>
             </div>
 
             <div class="answerBox">
-                <input id="first-answer10" type="radio" value=140><span>140</span> 
-                <input id="second-answer10" type="radio" value=120><span>120</span>
-                <input id="third-answer10" type="radio" value=160><span>160</span>
-                <input id="four-answer10" type="radio" value=100><span>100</span>
+                <input id="first-answer10" type="radio" value="java"><span>Java</span> 
+                <input id="second-answer10" type="radio" value="python"><span>Python</span>
+                <input id="third-answer10" type="radio" value="c"><span>C</span>
+                <input id="four-answer10" type="radio" value="jakarta"><span>Jakarta</span>
             </div>
             <button onclick="confermaDecimaRisposta()">Conferma</button>
         </div>
