--- a/D8/Quiz/quiz.html
+++ b/D8/Quiz/quiz.html
@@ -144,8 +144,7 @@
       }
 
       // Come calcolare il punteggio? Puoi farlo in 2 modi:
-      // Se stai mostrando al giocatore tutte le domande in un colpo solo, seleziona tutti i radio buttons e controlla se la risposta selezionata
-      // è quella corretta.
+      // Se stai mostrando al giocatore tutte le domande in un colpo solo, seleziona tutti i radio buttons e controlla se la risposta selezionata è quella corretta.
       // Se stai mostrando al giocatore le domande una alla volta, basta aggiungere o no 1 punto ogni volta che viene selezionata una risposta.
     </script>
   </body>
